--- a/SplunkAddonBuilder/eGAddonForSplunk/css/style1.css
+++ b/SplunkAddonBuilder/eGAddonForSplunk/css/style1.css
@@ -1,5 +1,5 @@
 /* Enable smooth scrolling */
-@media screen and (prefers-reduced-motion: no-preference) {
+@media screen and (prefers-reduced-motion: no-preference) and (prefers-color-scheme: dark) {
     html {
       scroll-behavior: smooth;
     }
