--- a/SplunkAddonBuilder/eGAddonForSplunk/css/style1.css
+++ b/SplunkAddonBuilder/eGAddonForSplunk/css/style1.css
@@ -1,5 +1,19 @@
 /* Enable smooth scrolling */
-@media screen and (prefers-reduced-motion: no-preference) and (prefers-color-scheme: dark) {
+
+@import url("https://www.w3schools.com/w3css/4/w3.css");
+@import url("https://www.w3schools.com/lib/w3-theme-black.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
+.w3-sidebar {
+  z-index: 3;
+  width: 250px;
+  top: 43px;
+  bottom: 0;
+  height: inherit;
+}
+
+@media screen and (prefers-reduced-motion: no-preference){
     html {
       scroll-behavior: smooth;
     }
